force-app/main/default/objects/SIOC__ResponseIndicators__c/SIOC__ResponseIndicators__c.object-meta.xml
<CustomObject>
    <label>Response Indicator</label>
    <nameField>
        <displayFormat>VRI-{00000}</displayFormat>
        <label>Response Indicators Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Response Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>