force-app/main/default/objects/SIOC__ResponseIndicators__c/fields/SIOC__Value__c.field-meta.xml
<CustomField>
    <fullName>SIOC__Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>