force-app/main/default/objects/SIOC__ResponseIndicators__c/fields/SIOC__VendorResponseEntity__c.field-meta.xml
<CustomField>
    <fullName>SIOC__VendorResponseEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this required lookup field with the vendor response entity record to which it&apos;s associated.</description>
    <label>Vendor Response Entity</label>
    <referenceTo>SIOC__VendorResponseEntity__c</referenceTo>
    <relationshipLabel>Response Indicators</relationshipLabel>
    <relationshipName>Response_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>