force-app/main/default/objects/SIOC__ResponseIndicators__c/fields/SIOC__VRTransactionId__c.field-meta.xml
<CustomField>
    <fullName>SIOC__VRTransactionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Response</label>
    <referenceTo>SIOC__VendorResponse__c</referenceTo>
    <relationshipLabel>Response Indicators</relationshipLabel>
    <relationshipName>ResponseIndicators</relationshipName>
    <type>Lookup</type>
</CustomField>